# roundtrip-xml

./: ChangeLog  LICENSE  README.md  roundtrip-xml.cabal
src/Text/Roundtrip/: Xml.hs
src/Text/Roundtrip/Xml/: Enumerator.hs  Parser.hs  ParserInternal.hs  Pretty.hs  Printer.hs
src/Text/Roundtrip/Xml/Enumerator/: Parser.hs  Printer.hs
tests/: 001.xml  002.xml  003.xml  004.xml  005.xml  006.xml  007.xml  008.xml  Tests.hs
